--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,9 @@
         "email": "campbellwgough@gmail.com"
     },
     "dependencies": {
-        "express": "4.17.1",
-        "body-parser": "1.19.0",
-        "node-adodb": "5.0.2"
+        "express": "~4.17.1",
+        "body-parser": "~1.19.0",
+        "node-adodb": "~5.0.2"
     },
     "homepage": "https://github.com/axendor/soupbet"
 }
