Code done on another pc, added all together here

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,20 +4,24 @@
     "version": "1.0.0",
     "main": "server",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "server": "nodemon server.js"
     },
     "repository": {
         "type": "git",
         "url": "https://github.com/axendor/soupbet.git"
     },
-    "author": "Campbell Gough",
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
     "bugs": {
         "email": "campbellwgough@gmail.com"
     },
     "dependencies": {
         "express": "~4.17.1",
         "body-parser": "~1.19.0",
-        "node-adodb": "~5.0.2"
+        "node-adodb": "~5.0.2",
+        "cors": "~2.8.5"
     },
     "homepage": "https://github.com/axendor/soupbet"
 }
