--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "bootstrap-vue": "^2.0.0",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
